# mynecraft

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build_and_run.sh  compile_flags.txt  notes.md
assets/shaders/: block.frag  block.fs  block.vert  block.vs  blockOutline.vert  block_outline.vs  crosshair.frag  crosshair.vert  ray.vert  skybox.frag  skybox.fs  skybox.vert
lib/: CMakeLists.txt
lib/PerlinNoise/: Makefile
lib/cglm/: CMakeLists.txt
lib/glad/: CMakeLists.txt  Makefile
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/: crosshair.aseprite
res/shaders/: 2d.frag  2d.vert  5.2.light_casters.fs  5.2.light_cube.fs  basic.frag  basicTexture.frag  basicTexture.vert  blockOutline.frag  crosshair.frag  crosshair.vert  ray.frag  sun.frag  sun.vert
src/: application.cpp  application.hpp  common.hpp  input.cpp  input.hpp  main.cpp  player.cpp  player.hpp  ray.cpp  ray.hpp  state.hpp
src/block_type/: air.hpp  cactus.hpp  cobblestone.hpp  grass.hpp  leaves.hpp  stone.hpp  water.hpp  wood.hpp
src/blocks/: block_type.hpp  blocks.hpp  cactus.hpp  grass.hpp  sand.hpp  snow.hpp  sun.hpp  wood.hpp
src/element/: element.hpp  grass.hpp
src/gfx/: block.cpp  block.hpp  blockOutline.cpp  blockOutline.hpp  block_outline.cpp  block_outline.hpp  block_renderer.hpp  camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  crosshair.hpp  cube_face.hpp  direction.hpp  drawable.hpp  gfx.hpp  primitive.cpp  primitive.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/gfx/Mesh/: index_buffer.hpp  mesh.cpp  mesh.hpp  vertex.hpp  vertex_buffer.hpp
src/gfx/world/: biome.cpp  chunk.cpp  chunk.hpp  mesh.cpp  mesh.hpp  tree.cpp  tree.hpp  world.cpp  world.hpp
src/level/: biome.hpp  chunk.cpp  chunk.hpp  chunkmesh.cpp  chunkmesh.hpp  direction.hpp  gen.cpp  gen.hpp  mesh.cpp  mesh.hpp  sky.cpp  sky.hpp  tree.cpp  tree.hpp  world.cpp  world.hpp
src/level/blocks/: air.hpp  block.hpp  block_type.hpp  cactus.hpp  cobblestone.hpp  grass.hpp  leaves.hpp  sand.hpp  snow.hpp  stone.hpp  water.hpp  wood.hpp
src/physics/: aabb.hpp
src/scene/: chunk.cpp  chunk.hpp  chunkmesh.cpp  chunkmesh.hpp  gen.cpp  gen.hpp  tree.cpp  tree.hpp  world.cpp  world.hpp  world_generator.cpp  world_generator.hpp  world_utils.cpp  world_utils.hpp
src/scene/blocks/: air.hpp  block.hpp  block_type.hpp  blocks.hpp  glass.hpp  grass.hpp  snow.hpp  (+1 more)
src/utils/: debug.hpp  math.hpp  position.hpp  ray.cpp  ray.hpp  vectors.hpp
